# rust

./: Cargo.toml  LLM.md  NOTICE  README.md  regenerate-capnp-schema-code.sh  regenerate-rpc-schema-code.sh
.github/actions/install-zap/: action.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
async-byte-channel/: Cargo.toml
bench-results/: ra-20260527T193511Z.json
benchmark/: Cargo.toml  README.md  bench.sh  benchmark.rs  build.rs  carsales.rs  carsales.zap  carsales_zap.rs  catrank.rs  catrank.zap  catrank_zap.rs  eval.rs  eval.zap  eval_zap.rs  run_all.rs  run_json.rs  saturate.sh
blog/: _config.yml  index.html
blog/_layouts/: post.html
blog/_posts/: 2013-11-16-benchmark.md  2013-11-17-lifetimes.md  2014-01-04-zmq-explorers.md  2014-01-15-benchmark-update.md  2014-04-06-error-handling.md  2014-06-01-libserialize-traits.md  2014-12-27-custom-mutable-references.md  2015-03-21-error-handling-revisited.md  2015-05-25-asynchronous-io-with-promises.md  2016-01-11-async-rpc.md  2017-01-04-rpc-futures.md  2017-02-27-cargo-fuzz.md  2019-12-06-async-await.md  2020-01-11-unaligned-memory-access.md  2020-01-19-new-feature-to-allow-unaligned-buffers.md  2020-06-06-no-std-support.md  2020-12-19-atomic-read-limiting.md  2022-11-03-0.15-release.md  2022-11-30-out_of_bounds_memory_access_bug.md  2023-05-08-run-time-reflection.md  2023-09-04-0.18-release.md  2024-01-14-0.19-release.md  2024-09-17-0.20-release.md  2025-10-27-0.22-release.md  2025-10-28-0.23-release.md
blog/css/: syntax.css
docs/content/docs/: installation.mdx
example/addressbook/: Cargo.toml  README.md  addressbook.rs  addressbook.zap
example/addressbook_send/: Cargo.toml  README.md  addressbook_send.rs  build.rs
example/fill_random_values/: Cargo.toml  README.md  addressbook.zap  build.rs  fill_addressbook.rs  fill_shapes.rs  shapes.zap
example/fill_random_values/src/: lib.rs
example/wasm-hello-world/: Cargo.toml  README.md  build.rs
example/wasm-hello-world/src/: main.rs
example/wasm-hello-world/wasm-app/: Cargo.toml  build.rs
example/wasm-hello-world/wasm-app/src/: lib.rs
npm/: .gitignore  install.js  package.json
tests/: pqrns_did.rs  pqrns_kat.json
zap/: CHANGELOG.md  Cargo.toml  README.md  c++.zap  schema.zap
zap-futures/: CHANGELOG.md  Cargo.toml  README.md
zap-futures/src/: read_stream.rs  serialize.rs  serialize_packed.rs  write_queue.rs
zap-futures/test/: Cargo.toml  build.rs  test.rs
zap-rpc/: CHANGELOG.md  Cargo.toml  README.md
zap-rpc/examples/calculator/: Cargo.toml  README.md  build.rs  calculator.zap  client.rs  main.rs  server.rs
zap-rpc/examples/hello-world/: Cargo.toml  build.rs  client.rs  main.rs  server.rs
zap-rpc/examples/pubsub/: Cargo.toml  build.rs  client.rs  main.rs  server.rs
zap-rpc/examples/reconnect/: Cargo.toml  build.rs  client.rs  main.rs  server.rs
zap-rpc/examples/streaming/: Cargo.toml  build.rs  client.rs  main.rs  server.rs
zap-rpc/schema/: rpc-twoparty.zap  rpc.zap
zap-rpc/src/: broken.rs  flow_control.rs  lib.rs  local.rs  queued.rs  reconnect.rs  rpc.rs  rpc_twoparty_zap.rs  rpc_zap.rs  sender_queue.rs  twoparty.rs
zap-rpc/test/: Cargo.toml  build.rs  impls.rs  reconnect_test.rs  test.rs  test_util.rs
zap/fuzz/: Cargo.toml  build.rs
zap/fuzz/fuzzers/: canonicalize.rs  serialize_packed_read_no_alloc.rs  test_all_types.rs
zap/src/: any_pointer_list.rs  capability.rs  dynamic_struct.rs  dynamic_value.rs  introspect.rs  lib.rs  message.rs  raw.rs  schema.rs  schema_zap.rs  serialize.rs  serialize_packed.rs  traits.rs
zap/src/serialize/: no_alloc_buffer_segments.rs
zap/tests/: README.md  canonicalize.rs  message_size_in_words.rs  primitive_list_as_slice.rs  primitive_list_as_slice_unaligned.rs  scratch_space_heap_allocator.rs  serialize_read_message_no_alloc.rs  single_segment_allocator.rs  text_comparisons.rs  total_size.rs
zapc/: CHANGELOG.md  Cargo.toml  README.md  rust.zap
zapc/src/: codegen.rs  codegen_types.rs  lib.rs  pointer_constants.rs  zapc-rust-bootstrap.rs  zapc-rust.rs
zapc/test/: Cargo.toml  build.rs  dynamic.rs  in-other-submodule.zap  in-submodule.zap  rust.zap  test-default-parent-module-override.zap  test-default-parent-module.zap  test.rs  test.zap  test_util.rs
zapc/test-edition-2015/: Cargo.toml  test.rs
zapc/test-edition-2018/: Cargo.toml  build.rs
zapc/test-edition-2021/: Cargo.toml  test.rs
zapc/test/external-crate/: Cargo.toml  build.rs
zapc/test/external-crate/src/: lib.rs
