[workspace.package]
rust-version = "1.81.0"

[workspace]

resolver = "2"

members = [
    # main crates, published on crates.io
    "zap",
    "zapc",
    "zap-futures",
    "zap-rpc",

    # testing and examples
    "async-byte-channel",
    "benchmark",
    "zapc/test",
    "zapc/test/external-crate",
    "zapc/test-edition-2015",
    "zapc/test-edition-2018",
    "zapc/test-edition-2021",
    "zap-futures/test",
    "zap-rpc/examples/hello-world",
    "zap-rpc/examples/calculator",
    "zap-rpc/examples/pubsub",
    "zap-rpc/examples/streaming",
    "zap-rpc/examples/reconnect",
    "zap-rpc/test",
    "example/addressbook",
    "example/addressbook_send",
    "example/fill_random_values",
]
default-members = [
    "zap",
    "zapc",
]

[workspace.lints]
