[package]
name = "benchmark"
version = "0.0.0"
authors = ["ZAP authors"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[[bin]]
name = "run_all_benchmarks"
path = "run_all.rs"

[[bin]]
name = "run_json"
path = "run_json.rs"

[dependencies]
zap = { path = "../zap" }
