[package]

name = "addressbook"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@gmail.com>"  ]
edition = "2018"
build = "build.rs"

[[bin]]

name = "addressbook"
path = "addressbook.rs"

[build-dependencies.zapc]
path = "../../zapc"

[dependencies.zap]
path = "../../zap"

[lints]
workspace = true
