[package]

name = "zap-rpc-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"
edition = "2021"

[lib]

name = "zap_rpc_test"
path = "test.rs"

[build-dependencies]
zapc = { path = "../../zapc" }

[dependencies.zap-rpc]
path = "../"

[dependencies]
zap = { path = "../../zap" }
futures = "0.3.0"
async-byte-channel = {path = "./../../async-byte-channel"}
