[package]

name = "zapc-test-edition-2015"
version = "0.0.0"
build = "build.rs"
edition = "2015"

[lib]

name = "zapc_test_edition_2015"
path = "test.rs"

[build-dependencies]
zapc = { path = "../" }

[dependencies]
zap = { path = "../../zap" }
zapc = { path = "../" }
external-crate = { path = "../test/external-crate" }