[package]

name = "zapc-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"
edition = "2021"

[lib]

name = "zapc_test"
path = "test.rs"

[build-dependencies]
zapc = { path = "../" }

[dependencies]
zap = { path = "../../zap" }
zapc = { path = "../" }
external-crate = { path = "./external-crate" }
