[package]
name = "wasm-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Avoid getting picked up by parent workspaces.
[workspace]
members = ["."]

[lib]
crate-type = ["cdylib"]

[dependencies.zap]
path = "../../../zap"
default-features = false
features = ["unaligned"]

[build-dependencies.zapc]
path = "../../../zapc"
