[package]

name = "hello-world"
version = "0.0.0"
authors = [ "Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"  ]
edition = "2021"

build = "build.rs"

[[bin]]
name = "hello-world"
path = "main.rs"

[build-dependencies]
zapc = { path = "../../../zapc" }

[dependencies]
zap = { path = "../../../zap" }
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

[dependencies.zap-rpc]
path = "../.."
