[package]
name = "pubsub"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]
edition = "2021"

build = "build.rs"

[[bin]]
name = "pubsub"
path = "main.rs"

[build-dependencies]
zapc = { path = "../../../zapc" }

[dependencies]
zap = { path = "../../../zap" }
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

[dependencies.zap-rpc]
path = "../.."
