[package]

name = "reconnect"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"
edition = "2021"

[[bin]]
name = "reconnect"
path = "main.rs"

[build-dependencies]
zapc = { path = "../../../zapc" }

[dependencies]
zap = { path = "../../../zap" }
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

[dependencies.zap-rpc]
path = "../.."
