[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[[bin]]
name = "streaming"
path = "main.rs"

[build-dependencies]
zapc = { path = "../../../zapc" }

[dependencies]
zap = { path = "../../../zap" }
futures = "0.3.0"
rand = "0.9.0"
sha2 = { version = "0.10.8" }
base16 = { version = "0.2" }
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

[dependencies.zap-rpc]
path = "../.."
